--- a/homework/Day_014_Yahoo_Movie_HW by刁.ipynb
+++ b/homework/Day_014_Yahoo_Movie_HW by刁.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,6 @@
       "葉問4 放映地區: 新竹, 代號(area_id): 20\n",
       "葉問4 放映地區: 苗栗, 代號(area_id): 15\n",
       "葉問4 放映地區: 台中, 代號(area_id): 2\n",
-      "葉問4 放映地區: 嘉義, 代號(area_id): 21\n",
       "葉問4 放映地區: 台南, 代號(area_id): 10\n",
       "葉問4 放映地區: 高雄, 代號(area_id): 17\n"
      ]
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,23 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 190,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'view'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-135-23df340ab03d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#print(resp.json()['view'])  # 若有需要，列印出json原始碼\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0msoup\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'view'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'lxml'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mhtml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ul\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'data-theater_name'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".*\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'view'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 向網站發送請求，獲取上映的電影院及時間資訊\n",
     "url = \"https://movies.yahoo.com.tw/ajax/pc/get_schedule_by_movie\"\n",
@@ -328,15 +315,12 @@
     "#print(resp.json()['view'])  # 若有需要，列印出json原始碼\n",
     "\n",
     "soup = BeautifulSoup(resp.json()['view'], 'lxml')\n",
-    "html = soup.find_all(\"ul\", attrs={'data-theater_name':re.compile(\".*\")})\n",
-    "\n",
-    "print(html)\n",
-    "\n"
+    "html = soup.find_all(\"ul\", attrs={'data-theater_name':re.compile(\".*\")})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
