--- a/homework/Day021_HW by刁.ipynb
+++ b/homework/Day021_HW by刁.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -916,25 +916,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: Cannot locate option with value: 01\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-10328f93eadd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mselM\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSelect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbrowser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_id\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"selM\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mselM\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_by_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthree_days_ago_month\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mselD\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSelect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbrowser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_id\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"selD\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mselD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mselect_by_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthree_days_ago_day\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\selenium\\webdriver\\support\\select.py\u001b[0m in \u001b[0;36mselect_by_value\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m     85\u001b[0m             \u001b[0mmatched\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mmatched\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 87\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mNoSuchElementException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Cannot locate option with value: %s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     88\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mselect_by_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: Cannot locate option with value: 01\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020/01/31 19:00\n",
+      "2020/01/31 18:48\n",
+      "2020/01/31 18:30\n",
+      "2020/01/31 18:13\n",
+      "2020/01/31 18:06\n",
+      "2020/01/31 17:59\n",
+      "2020/01/31 17:50\n",
+      "2020/01/31 17:40\n",
+      "2020/01/31 17:30\n",
+      "2020/01/31 17:18\n",
+      "2020/01/31 17:10\n",
+      "2020/01/31 16:55\n",
+      "2020/01/31 16:48\n",
+      "2020/01/31 16:41\n",
+      "2020/01/31 16:31\n",
+      "2020/01/31 16:20\n",
+      "2020/01/31 16:08\n",
+      "2020/01/31 15:56\n",
+      "2020/01/31 15:49\n",
+      "2020/01/31 15:44\n",
+      "2020/01/31 15:32\n",
+      "2020/01/31 15:27\n",
+      "2020/01/31 15:14\n",
+      "2020/01/31 15:06\n",
+      "2020/01/31 14:57\n",
+      "STOP\n"
      ]
     }
    ],
    "source": [
     "# 下拉日期 和 時間選單\n",
-    "# problem:電腦時間為01，但下拉選單的時間只有1，格式不符，待解決~\n",
+    "\n",
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium.webdriver.support.ui import Select\n",
@@ -943,7 +963,7 @@
     "browser.get(\"https://www.ettoday.net/news/news-list.htm\")\n",
     "\n",
     "selM = Select(browser.find_element_by_id(\"selM\"))\n",
-    "selM.select_by_value(three_days_ago_month)\n",
+    "selM.select_by_value('1')\n",
     "selD = Select(browser.find_element_by_id(\"selD\"))\n",
     "selD.select_by_value(three_days_ago_day)\n",
     "browser.find_element_by_id('button').click()\n",
@@ -962,28 +982,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'soup' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-338de642a046>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"part_list_2\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'h3'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"date\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%Y/%m/%d %H:%M'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mthree_days_15_clocks\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"STOP\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'soup' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020/01/31 16:58 夏普指控日本OPPO侵權　向東京地院提告要求禁售5款高性能手機\n",
+      "2020/01/31 16:57 星國總理李顯龍：口罩存貨足　沒生病不必戴\n",
+      "2020/01/31 16:56 《黑魔女》女主角打嗝、抽大麻「脱到只剩內褲」　甜美形象崩壞\n",
+      "2020/01/31 16:55 港議員亂教「蒸口罩」　網友實測後秒傻眼「記得加蔥花」\n",
+      "2020/01/31 16:54 閨密出遊租屋　半夜「腳踝被偷摸」嚇醒...裸男：我在妳衣櫥裡\n",
+      "2020/01/31 16:53 漫威最新遊戲《Marvel’s Avengers》預告曝光　美隊疑似意外身亡\n",
+      "2020/01/31 16:52 吳克群揭和陳語安私下互動「超幼稚」！　《為你寫詩》暗藏感情觀\n",
+      "2020/01/31 16:52 武漢肺炎爆發前買房　菜菜擔憂「現在買貴」！網友佛心勸：很難跌\n",
+      "2020/01/31 16:50 叫外送會傳染武漢肺炎？　專家三點釋疑「拿食物前這樣做」\n",
+      "2020/01/31 16:50 疫情蔓延後陸首批經濟數據　製造業PMI降回枯榮線\n",
+      "2020/01/31 16:50 她塞「微型按摩棒」出門吃晚餐！劇痛後「異物感」消失　但它還在深處震動…\n",
+      "2020/01/31 16:49 寒流低溫來襲！慢性病發比肺炎疫情更可怕　醫師籲：務必按時服藥回診\n",
+      "2020/01/31 16:48 成功大學宣布延後2週開學！供陸生「1人1室」集中檢疫管理\n",
+      "2020/01/31 16:48 洗衣機「炸出海苔」清不完　他疑洗衣精惹禍！達人曝秘招：不易長黴菌\n",
+      "2020/01/31 16:47 10大建商寶佳1200億推案量奪冠　南部2建商爭氣擠進\n",
+      "2020/01/31 16:46 獨／團購「每片4元醫療口罩」5萬片1小時搶光！經濟部： 恐已觸法\n",
+      "2020/01/31 16:46 點完耳藥去告狀！戲精貓委屈臉快哭了　阿嬤指責孫女：哩安捏母厚\n",
+      "2020/01/31 16:44 《超人》建厚媽公開第三胎性別！娜恩初見寶寶反應讓她哭了\n",
+      "2020/01/31 16:43 女遭偷拍性愛影片淪人肉ATM　渣男先要5千再索1萬讓她崩潰\n",
+      "2020/01/31 16:43 武漢肺炎危機　阿里山風景管理處啟動防疫機制\n",
+      "2020/01/31 16:43 廣華-KY武漢廠「延至2/12開工」：受肺炎影響有限　年營收占比僅8%至10%\n",
+      "2020/01/31 16:43 體育署長「東奧摘金」贈中華射擊隊　3月前國家隊往大陸全取消\n",
+      "2020/01/31 16:42 預測武漢肺炎疫情4走向！前台大醫曝「死亡率被高估」：長期抗戰才剛開始\n",
+      "2020/01/31 16:41 武漢肺炎可痊癒　陸衛健委：重症者有肺纖維化後遺症風險\n",
+      "2020/01/31 16:41 一週奪13命！流感疫情還在燒　她打疫苗仍中鏢...住院5天後死亡\n",
+      "2020/01/31 16:39 英國防疫撤僑　包機載逾百人飛離武漢\n",
+      "2020/01/31 16:39 武漢肺炎「電影院觀眾蒸發」！串流平台宣布：流量暴增2倍　《小丑》排名第2\n",
+      "2020/01/31 16:37 兩岸10年前就簽了這協議　馬英九要蔡英文放下政治考量阻絕疫情\n",
+      "2020/01/31 16:37 口罩6元太貴？經部：加班趕工人力成本高「2月15日後視產能調價」\n",
+      "2020/01/31 16:37 C羅IG也要買粉絲　2億粉絲有5千萬殭屍粉印度佔多數\n",
+      "2020/01/31 16:36 網咖餐點驚見高級山藥　有私人包廂還有淋浴間「根本是民宿」\n",
+      "2020/01/31 16:34 人類生來渴望歸屬　寂寞是在品嘗促成歸屬的這份本質\n",
+      "2020/01/31 16:33 台鐵人沒口罩！機務人員只能戴「活性碳口罩」　台鐵：2天內再送14萬個\n",
+      "2020/01/31 16:31 金錢豹美眉怕成「護國舞小姐」...戴口罩陪酒！顧客怨：怎麼挑小姐？\n",
+      "2020/01/31 16:30 500元在藥妝店就可以搞定全臉妝容？小資族、學生必筆記的購買攻略\n",
+      "2020/01/31 16:27 新台幣止貶回升　收盤升值2.7分收30.25元兌1美元\n",
+      "2020/01/31 16:25 【看劇人生】《唐人街探案》半數主角來自台灣　懸疑喜劇網影聯動\n",
+      "2020/01/31 16:25 帶狗房客「床留2坨便便」！枕頭被套黃黃的　民宿老闆氣炸：離開都沒講\n",
+      "2020/01/31 16:23 17款新春刮刮樂中獎機率報你知　還有546個百萬以上大獎待刮出\n",
+      "2020/01/31 16:23 達文西為什麼會畫畫又會算數學？斜槓青年是21世紀文藝復興人\n",
+      "2020/01/31 16:23 全球第二大晶片廠海力士去年第四季業績未達預期！　營業利潤年減95％\n",
+      "2020/01/31 16:21 「護士長媽媽」除夕夜奔武漢　初中生作業寫「最不尋常的寒假」\n",
+      "2020/01/31 16:20 記者直擊白髮翁倒斃武漢街頭　恐懼感瀰漫全市\n",
+      "2020/01/31 16:20 防範一氧化碳中毒　嘉義市消防局短片《死瀰》鬼片手法超驚悚\n",
+      "2020/01/31 16:15 全民上網監工！　武漢火神山醫院力拚2/1建成\n",
+      "2020/01/31 16:14 白癡公主「表姊妹們」罕見入鏡！　髮型眼睛幾乎長一樣…全網看呆：基因太強\n",
+      "2020/01/31 16:13 遭綠營準立委高嘉瑜砲轟　職安署出面提四點說明滅火\n",
+      "2020/01/31 16:10 限期2個月　六福客棧金鳳廳推車港點吃到飽499元\n",
+      "2020/01/31 16:10 因應開學季　盧秀燕訪視幼兒園呼籲落實「防疫3步驟」\n",
+      "2020/01/31 16:10 朝山國小李麗娥續任校長　再造優質教育環境\n",
+      "2020/01/31 16:10 護士滿臉口罩印痕宛如「章魚吸盤」　除夕夜捲袖打針奔武漢支援\n",
+      "2020/01/31 16:10 法國吐司單周狂賣5萬條　2大超商「2019超夯聯名甜點」盤點　\n",
+      "2020/01/31 16:09 全國第一名　室內撐竿跳大黑馬成德中學杜立暘奪金\n",
+      "2020/01/31 16:08 防疫武漢肺炎無死角　嘉市府開啟街友關懷網\n",
+      "2020/01/31 16:08 機師工會提告美航！　力爭立即停飛中國航班：武漢肺炎嚴重威脅健康\n",
+      "2020/01/31 16:08 武漢肺炎213死　美商務部長：有助美國就業機會！\n",
+      "2020/01/31 16:07 祖孫共讀話題正夯　增進祖孫情感、延緩長者失智\n",
+      "2020/01/31 16:06 預防不當積存及哄抬口罩價格　嘉市消保官抽查各大通路\n",
+      "2020/01/31 16:05 法拉利「無頂單座」Monza SP1中看不中用？前F1冠軍飆給你看\n",
+      "2020/01/31 16:02 游錫堃拉票二訪民眾黨　賴香伶：希望跟新院長合作「第一個」議案\n",
+      "2020/01/31 16:01 武漢肺炎疫情延燒　翔宇：營運無重大影響\n",
+      "2020/01/31 16:00 2020桃園燈會今起點燈！光之森林、迷宮40燈飾分佈3大區\n",
+      "2020/01/31 15:56 快訊／台北電玩展宣布延期！活動時間改2020暑假\n",
+      "2020/01/31 15:56 台東縣教育處宣布　國中2月3日寒假課輔照常舉辦\n",
+      "2020/01/31 15:55 網謠傳「武漢肺炎」患者曾就診　彭賢禮診所開工坦言：有影響\n",
+      "2020/01/31 15:55 硬漢車對決！百萬皮卡挑戰鐵板卡車下場是...引擎蓋掀起、保險桿破裂\n",
+      "2020/01/31 15:54 醫師夫在大陸…正宮驚見戶口「多個女兒」怒告　討扶養費卻「跟兒子不熟」\n",
+      "2020/01/31 15:54 求婚、告白全新企劃！台北霞海月老助你一臂之力\n",
+      "2020/01/31 15:53 公開的秘密…每年活活絞碎70億隻　法國宣布「2年內全面禁殺小公雞」\n",
+      "2020/01/31 15:52 Eric、Andy遭梳「露額中分頭」笑瘋！禿頭演員也要被嗆：你沒救了\n",
+      "2020/01/31 15:51 中職／超豪華陣容！悍將4洋投率先到齊　正式投入春訓\n",
+      "2020/01/31 15:51 美國男大生受困武漢一周超崩潰！　「這裡像一座鬼城，彷彿遭遇世界末日」\n",
+      "2020/01/31 15:50 陸專家：武漢肺炎痊癒者「仍有再感染風險」\n",
+      "2020/01/31 15:49 鄭文燦視察口罩供應通路　建議中央對自主隔離者建立補償機制\n",
+      "2020/01/31 15:49 網購乾洗手「700隔天變2290」　商城曝「暴漲3倍」合理真相：不下架\n",
+      "2020/01/31 15:48 台灣東洋晚期肺癌口服藥　取得非小細胞肺癌健保給付\n",
+      "2020/01/31 15:48 武漢女寫日記揭封城內部情況　糧食口罩全搶光發文還被刪\n",
+      "2020/01/31 15:48 看到特價就狂囤貨？甩開「雜物盲」　為自己留下真正需要的事物\n",
+      "2020/01/31 15:46 喬治配音悼念Kobe影片「他像陽光照耀南加州」　快艇不遮蓋布萊恩退休球衣\n",
+      "2020/01/31 15:45 苗縣府標售「竹科竹南基地周邊地區特定區」　區段徵收可建地\n",
+      "2020/01/31 15:45 深圳將「廚餘拆袋」列入法規　違規不聽勸阻可罰800元\n",
+      "2020/01/31 15:44 美聯邦參議員魯比歐籲強化台美關係　外交部致謝：以具體行動為台灣發聲\n",
+      "2020/01/31 15:44 亞洲盃男籃資格賽　鎖定ELEVEN SPORTS獨家轉播\n",
+      "2020/01/31 15:44 今年最旺投注站在台中！　開出大樂透頭獎2.47億、3組春節百萬大紅包\n",
+      "2020/01/31 15:43 在家刷肺炎疫情釀憂鬱！　陸專家：做點喜歡且有意義的事\n",
+      "2020/01/31 15:43 環狀線通車新利多！一洗「見車不見人」窘境　兩站土開案預備開搶\n",
+      "2020/01/31 15:43 宋兆文／美軍春節巡航南海　中美爭鋒白熱化\n",
+      "2020/01/31 15:43 1萬多元手錶收藏46年捨不得用　翻倍「2116萬元」他嚇到當場腿軟！\n",
+      "2020/01/31 15:41 南韓今晚啟動第二波包機撤僑！　文在寅指示內閣採取緊急措施防疫\n",
+      "2020/01/31 15:41 假牙「黏進嘴巴」懶得拔...下場慘！　專家點出「正確清洗頻率」\n",
+      "2020/01/31 15:37 Google搜尋將「冠狀病毒」列為SOS警報　搜尋關鍵字顯示WHO資訊卡\n",
+      "2020/01/31 15:35 防疫優先！「永然第23期高中法律生活營」取消\n",
+      "2020/01/31 15:35 網路銷售當月達到起徵門檻　就要登記稅籍\n",
+      "2020/01/31 15:32 北捷2/1常客優惠啟動！　嗶卡聽到「這聲音」回饋金自動加值\n",
+      "2020/01/31 15:32 武漢肺炎疫情升溫！民眾瘋搶酒精…店家「不賺這種發財錢」霸氣喊：價格不調漲\n",
+      "2020/01/31 15:32 《天堂》衝催淚大結局！「一家4口全家福照」藏洋蔥\n",
+      "2020/01/31 15:30 獨／直擊新疆街頭「掃雪工比路人多」　返鄉民眾：10天只出門3次\n",
+      "2020/01/31 15:29 刷新歷史記錄！勞動基金108年大賺4735億元　每位勞工退休帳戶平均分紅逾2萬\n",
+      "2020/01/31 15:29 范瑋琪哈佛學歷被攻擊　邱毅：社會墮落！何不用同標準檢視蔡英文？\n",
+      "2020/01/31 15:28 居家隔離「手機監控」200支待配送　指揮中心：新確診接觸者優先發放\n",
+      "2020/01/31 15:28 海豹隔玻璃愛上臘腸　主人看照片驚覺「關鍵穿搭」被誤認是同類\n",
+      "2020/01/31 15:28 「瘟疫級」病毒！1918年爆發全球性大流感　逾5000萬人亡...比一戰還慘烈\n",
+      "2020/01/31 15:27 不畏寒冬！淡水暖警送暖不間斷　親送物資至弱勢家庭助過年\n",
+      "2020/01/31 15:27 台股暴跌後反彈！法人建議短線操作宜謹慎　中長線持正面看待\n",
+      "2020/01/31 15:25 不知沒人在...呆萌貓「帶雞腿」蹲房等門！　淒涼背影笑翻網：快開門\n",
+      "2020/01/31 15:22 被鞭炮聲一嚇「從土城流浪到中和」　歐告重逢主人激動獻抱\n",
+      "2020/01/31 15:21 【武漢肺炎】切斷傳染途徑　公共場所要做「這件事」\n",
+      "2020/01/31 15:21 遊客驚見大食蟻獸與圓仔「同框喝水」　動物園出面說話了\n",
+      "2020/01/31 15:20 雲林全縣國中寒假課後輔導停課　風景絕美的東南中學謝絕訪客\n",
+      "2020/01/31 15:20 影／基隆廟口夾娃娃機放口罩！「整盒580元」保夾　民眾怒：太不划算\n",
+      "2020/01/31 15:18 防疫武漢肺炎不鬆懈　盧秀燕：務必阻絕疫情「滴水不漏」\n",
+      "2020/01/31 15:18 歐盟不甩蘋果！議會表決通過充電器應盡快統一標準\n",
+      "2020/01/31 15:16 日本武漢肺炎15例確診「防疫輸台灣」！　醫師分析「2慢半拍關鍵」\n",
+      "2020/01/31 15:14 看好科技農業趨勢　翁章梁訪鴻海科技農業創業首獎得主\n",
+      "2020/01/31 15:13 中職／為選手注入新觀念　許峰賓拆解跑壘細節\n",
+      "2020/01/31 15:13 影／口罩不夠！韓國瑜：開學後單日需55萬片　疫情若爆發「要蓋大型收容所」\n",
+      "2020/01/31 15:12 澳網／謝淑薇雙打爭冠失利　不影響下週登球后\n",
+      "2020/01/31 15:12 王正坤出席世界美容醫學大會　觀察醫美市場新思維　\n",
+      "2020/01/31 15:10 過年胖三斤營養師提清腸食物　優格、味噌讓腸道維持酸性環境\n",
+      "2020/01/31 15:09 嘉義絕美落羽松秘境重新開放！全因財神廟「提供車位＋幫忙清垃圾」\n",
+      "2020/01/31 15:08 縱容綠營人士推動「罷韓」　孫大千：蔡英文害怕得罪「兩種人」\n",
+      "2020/01/31 15:08 奴才們快鎖定！日本超療癒「胖胖犬」扭蛋　肥柴、傻哈萌到被融化\n",
+      "2020/01/31 15:06 東奧跆拳道採用新款道服　曾因觀賞性差遭反彈\n",
+      "2020/01/31 15:06 王道銀行桃園分行今開幕　提供消費者「虛實整合」服務\n",
+      "2020/01/31 15:05 江啟臣選黨主席理由曝光！　他嘆：選民最希望國民黨做到這3件事\n",
+      "2020/01/31 15:05 超級盃／酋長超強進攻帶來考驗　49人明星角衛沒在怕的！\n",
+      "2020/01/31 15:03 連3年當他見面會主持人　朴寶劍送生產賀禮「20天前就準備」\n",
+      "2020/01/31 15:01 南非旅遊新規　禁止人與野生動物互動「引發正反兩派聲浪」\n",
+      "2020/01/31 15:00 蔡英文找陳建仁分享「抗SARS」經驗：這2個時機要戴口罩！\n",
+      "2020/01/31 15:00 台東元宵節慶活動不畏武漢肺炎　宣布將照常舉行\n",
+      "2020/01/31 15:00 溫泉蛋＋起司鋪滿飯上！台南銷魂和牛魯肉丼　還有濃郁咖哩飯\n",
+      "STOP\n"
      ]
     }
    ],
    "source": [
     "for d in soup.find(class_=\"part_list_2\").find_all('h3'):\n",
-    "    if datetime.datetime.strptime(d.find(class_=\"date\").text, '%Y/%m/%d %H:%M') < three_days_15_clocks:\n",
+    "    if datetime.datetime.strptime(d.find(class_=\"date\").text, '%Y/%m/%d %H:%M') < three_days_15_clock:\n",
     "        print(\"STOP\")\n",
     "        break\n",
     "    \n",
-    "    if datetime.datetime.strptime(d.find(class_=\"date\").text, '%Y/%m/%d %H:%M') < three_days_17_clocks:\n",
+    "    if datetime.datetime.strptime(d.find(class_=\"date\").text, '%Y/%m/%d %H:%M') < three_days_17_clock:\n",
     "        print(d.find(class_=\"date\").text,d.find_all('a')[-1].text)"
    ]
   },
